Wed Feb  3 08:25:38 2016  boshan  <boshan@subsplash.com>

	* ext/openssl/ossl_pkey.c (Init_ossl_pkey): [DOC] Fix typo
	  "encrypted" to "decrypted".  [Fix GH-1235]

Wed Feb  3 08:21:32 2016  Seiei Miyagi  <hanachin@gmail.com>

	* ext/ripper/lib/ripper/lexer.rb (on_heredoc_dedent): Fix
	  Ripper.lex error in dedenting squiggly heredoc.  heredoc tree is
	  also an array of Elem in the outer tree.  [Fix GH-1234]

Wed Feb  3 02:33:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_prepare_enc): use already compiled US-ASCII regexp
	  if given string is ASCII only.
	  121.2s to 113.9s on my x86_64-freebsd10.2 Intel Core i5 661

Tue Feb  2 13:02:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c: Introduce RREGEXP_PTR.
	  patch by dbussink.
	  partially merge https://github.com/ruby/ruby/pull/497

	* include/ruby/ruby.h: ditto.

	* gc.c: ditto.

	* ext/strscan/strscan.c: ditto.

	* parse.y: ditto.

	* string.c: ditto.

Tue Feb  2 09:08:27 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems/specification.rb: `coding` is effective only first
	  line except shebang.

	* lib/rubygems/package.rb, lib/rubygems/package/*: ditto.

Mon Feb  1 21:41:58 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.5.2.
	  It supports to enable frozen string literal and add `--norc` option for
	  disable to `.gemrc` configuration.
	  See 2.5.2 release notes for other fixes and enhancements.
	  https://github.com/rubygems/rubygems/blob/a8aa3bac723f045c52471c7b9328310a048561e0/History.txt#L3

Sun Jan 31 12:33:13 2016  Dan Kreiger  <dan@dankreiger.com>

	* test/drb/ut_large.rb (multiply, avg, median): add additional
	  math operations to DRbLarge.  [Fix GH-1086]

Sun Jan 31 12:19:15 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_file_exhaustive.rb (test_lstat): Add lacking test
	  for File#lstat.  [Fix GH-1231]

Sun Jan 31 12:15:33 2016  Prayag Verma  <prayag.verma@gmail.com>
