@@ -1,5 +1,4 @@
-#include "ruby.h"
-#include "ruby/encoding.h"
+#include "internal.h"
 
 static VALUE
 bug_str_cstr_term(VALUE str)
@@ -71,6 +70,44 @@ bug_str_s_cstr_term_char(VALUE self, VALUE str)
     return bug_str_cstr_term_char(str);
 }
 
+#define TERM_LEN(str) rb_enc_mbminlen(rb_enc_get(str))
+#define TERM_FILL(ptr, termlen) do {\
+    char *const term_fill_ptr = (ptr);\
+    const int term_fill_len = (termlen);\
+    *term_fill_ptr = '\0';\
+    if (UNLIKELY(term_fill_len > 1))\
+	memset(term_fill_ptr, 0, term_fill_len);\
+} while (0)
+
+static VALUE
+bug_str_s_cstr_noembed(VALUE self, VALUE str)
+{
+    VALUE str2 = rb_str_new(NULL, 0);
+    long capacity = RSTRING_LEN(str) + TERM_LEN(str);
+    char *buf = ALLOC_N(char, capacity);
+    Check_Type(str, T_STRING);
+    FL_SET((str2), STR_NOEMBED);
+    memcpy(buf, RSTRING_PTR(str), capacity);
+    RBASIC(str2)->flags &= ~RSTRING_EMBED_LEN_MASK;
+    RSTRING(str2)->as.heap.aux.capa = capacity;
+    RSTRING(str2)->as.heap.ptr = buf;
+    RSTRING(str2)->as.heap.len = RSTRING_LEN(str);
+    TERM_FILL(RSTRING_END(str2), TERM_LEN(str));
+    return str2;
+}
+
+static VALUE
+bug_str_s_cstr_embedded_p(VALUE self, VALUE str)
+{
+    return STR_EMBED_P(str) ? Qtrue : Qfalse;
+}
+
+static VALUE
+bug_str_s_rb_str_new_frozen(VALUE self, VALUE str)
+{
+    return rb_str_new_frozen(str);
+}
+
 void
 Init_cstr(VALUE klass)
 {
@@ -80,4 +117,7 @@ Init_cstr(VALUE klass)
     rb_define_singleton_method(klass, "cstr_term", bug_str_s_cstr_term, 1);
     rb_define_singleton_method(klass, "cstr_unterm", bug_str_s_cstr_unterm, 2);
     rb_define_singleton_method(klass, "cstr_term_char", bug_str_s_cstr_term_char, 1);
+    rb_define_singleton_method(klass, "cstr_noembed", bug_str_s_cstr_noembed, 1);
+    rb_define_singleton_method(klass, "cstr_embedded?", bug_str_s_cstr_embedded_p, 1);
+    rb_define_singleton_method(klass, "rb_str_new_frozen", bug_str_s_rb_str_new_frozen, 1);
 }
